--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ os:
   - linux
   - osx
 julia:
-  - 0.7
   - 1.0
   - nightly
 
@@ -14,5 +13,5 @@ matrix:
 notifications:
   email: false
 
-after_success:
-    - julia -e 'cd(Pkg.dir("Semirings")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+# after_success:
+#     - julia -e 'cd(Pkg.dir("Semirings")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
