--- a/Project.toml
+++ b/Project.toml
@@ -4,4 +4,5 @@ authors = ["mcognetta <cognetta.marco@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 SimpleTraits = "699a6c99-e7fa-54fc-8d76-47d257e15c1d"
