adding coverage test

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,5 @@ matrix:
 notifications:
   email: false
 
-# after_success:
-#     - julia -e 'cd(Pkg.dir("Semirings")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+after_success:
+    - julia -e 'cd(Pkg.dir("Semirings")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
