--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ notifications:
   email: false
 
 after_success:
-  - julia -e 'cd(Pkg.dir("Semirings")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(process_folder())'
+  - julia -e 'cd(Pkg.dir("Semirings")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
   - julia -e 'cd(Pkg.dir("Semirings")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
